--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "quill": "^1.3.7",
     "vue": "^2.6.10",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
