--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "highlight.js": "^9.17.1",
     "js-cookie": "^2.2.1",
     "quill": "^1.3.7",
     "vue": "^2.6.10",
